# NeedForDrive

./: CMakeLists.txt  README.md  achievement.cpp  achievement.h  boost.cpp  boost.h  car.cpp  car.h  checkpoint.cpp  checkpoint.h  circuit.cpp  circuit.h  circuit.txt  decor.cpp  decor.h  erori.h  game.cpp  game.h  ghost.cpp  ghost.h  hud.cpp  hud.h  kit.cpp  kit.h  leaderboard.cpp  leaderboard.h  main  main.cpp  menu.cpp  menu.h  motorfix.cpp  motorfix.h  obstacol.cpp  obstacol.h  penalizare.cpp  penalizare.h  powerUp.cpp  powerUp.h  power_up_factory.cpp  power_up_factory.h  (+7 more)
.github/actions/install-linux-deps/: action.yml
.github/actions/install-packages/: action.yml
assets/: circuit_data.txt
cmake/: CompilerFlags.cmake  CopyHelper.cmake  CustomStdlibAndSanitizers.cmake  Options.cmake
